tests/Checker/everything/errors/4d.sol
======= The VC compiler =======

Pass 1: Lexical and syntactic Analysis
ERROR: 1(5)..1(5): identifier expected here
Compilation was unsuccessful.

// void array functions aren't even syntactically valid
